Margins gaps fixed

--- a/css/card.css
+++ b/css/card.css
@@ -9,7 +9,6 @@
 .card {
   background-color: #625B9E;
   padding: 20px;
-  margin-top: 20px;
   border-radius: 25px;
   margin-bottom:20px;
 }
