--- a/css/topnav.css
+++ b/css/topnav.css
@@ -5,7 +5,7 @@
   overflow: hidden;
   background-color: #625B9E;
   border-radius: 25px;
-  margin-top: 20px;
+  margin-bottom:20px;
 }
 
 /* Style the topnav links */
